# LED-Controller-OS

./: .gitignore  CMakeLists.txt  EDITOR_USAGE.md  LICENSE  Makefile  README.md  STREAM_USAGE_EXAMPLE.md  start-env  start.sh.cfg
Helper-Tools/: DELIVERY_CHECKLIST.md  PATTERN_DESIGNER_IMPLEMENTATION.md  PATTERN_DESIGNER_INDEX.md  PATTERN_DESIGNER_QUICKSTART.md  PATTERN_DESIGNER_README.md  filesync.py  pattern_designer.py  pattern_designer_requirements.txt  readme.md
Helper-Tools/BandwidthTester/: bandwidthtest.py
Helper-Tools/FileExchange/: filesync.py
Helper-Tools/PatternDesigner/: .gitignore  pattern_designer.py
Helper-Tools/SerialServer/: serial_network_server.py
MatrixChar-test/: Makefile  MatrixChar5x5.h
TestPrograms/CRC-Test/: .gitignore  Makefile
TestPrograms/CRC-Test/src/: crc-test.cpp
TestPrograms/CRC-Test/src/Utils/: crc.cpp
TestPrograms/DataFile/: .gitignore  Alarm.txt  Alarm2.txt  Makefile
TestPrograms/DataFile/include/Utils/: base64.h  hexadecimal.h
TestPrograms/DataFile/src/: Flash  dfile.cpp
TestPrograms/DataFile/src/Utils/: base64.cpp  hexadecimal.cpp
TestPrograms/FileSignatures/: Makefile
TestPrograms/FileSignatures/include/Utils/: crc.h  dataFile.h
TestPrograms/FileSignatures/src/: signature.cpp
TestPrograms/FileSignatures/src/Utils/: dataFile.cpp
TestPrograms/MatrixChar-test/: .gitignore  MatrixChar5x5.h  MatrixChar8x8.h  matrix-text.cpp
TestPrograms/fs-test/: .gitignore
TestPrograms/fs-test/include/: ICommand.h  ITask.h
TestPrograms/fs-test/include/Commands/: CatCommand.h  ChangeDirCommand.h  DirCommand.h  FSInfoCommand.h  HelpCommand.h  MakeDirCommand.h
TestPrograms/fs-test/include/Flash/: SPFS.h  flash.h
TestPrograms/fs-test/src/: Console.cpp  fs-test.cpp
TestPrograms/fs-test/src/Flash/: SPFS.Directory.cpp  SPFS.File.cpp  SPFS.ReadOnlyFile.cpp  SPFS.cpp  flash.cpp
app/: CMakeLists.txt  analyze_memory.sh
app/include/: Config.h  Console.h  HLKLogger.h  HexLogger.h  IComLogger.h  ICommand.h  IDataStream.h  IRQFifo.h  ITask.h  IVariable.h  IVariableStore.h  Mainloop.h  VariableStore.h  tusb_config.h
app/include/BackgroundTasks/: StartCommand.h
app/include/Commands/: BeepCommand.h  BootCommand.h  CatCommand.h  ChangeDirCommand.h  CreateVarCommand.h  DeviceCommand.h  DirCommand.h  EchoCommand.h  EditCommand.h  EnvCommand.h  ExecCommand.h  FSInfoCommand.h  GetCommand.h  HelpCommand.h  KillCommand.h  LedCommand.h  LoadCommand.h  MakeDirCommand.h  MakeFilesystemCommand.h  MemInfoCommand.h  ReadCommand.h  SetCommand.h  SignalCommand.h  SleepCommand.h  StartCommand.h  StoreCommand.h  TaskCommand.h  TimeCommand.h  VersionCommand.h  WriteCommand.h  echo.h  env.h  eval.h  get.h  help.h  led.h  set.h  version.h
app/include/Flash/: SPFS.h  flash.h  flashHAL.h
app/include/HLKStack/: HLKCommand.h  HLKDistance.h  HLKFrame.h  HLKPackageFinder.h  HLKStandart.h  IHLKPackage.h
app/include/LED/: WS2812.h
app/include/PIO/: led.pio.h
app/include/RTC/: PicoTime.h
app/include/Utils/: IRQFifo.h  Signal.h  ValueConverter.h  base64.h  crc.h  dataFile.h  hexadecimal.h
app/include/VariableStore/: BoolVariable.h  FloatVariable.h  IVariable.h  IntVariable.h  StringVariable.h  Variable.h  VariableStore.h
app/include/VariableStore/SpecialVariables/: CPUTemperature.h  GPIOVaraible.h  LinearTransformation.h
app/include/deviceController/: ADCFactory.h  CommRouterFactory.h  DeviceRepository.h  GPIOFactory.h  HLKFactory.h  IDeviceFactory.h  LEDDisplayFactory.h  LEDFactory.h  LEDStatusFactory.h  LoopbackFactory.h  PIOFactory.h  PWMFactory.h  SevenSegFactory.h  UARTFactory.h
app/include/deviceController/Helper/: ICommDeviceHelper.h
app/include/devices/: ADCDevice.h  GPIODevice.h  HLKDevice.h  ICommDevice.h  IDevice.h  IDisplayDevice.h  IDisplayScrolling.h  LEDStatus.h  Loopback.h  MatrixChar5x5.h  MatrixChar8x8.h  MultiPassthrough.h  PIO.h  PIODevice.h  PWMDevice.h  Passthrough.h  PassthroughMonitor.h  SevenSeg.h  UARTDevice.h  USBUARTDevice.h  WS2812.h  dotMatrix5x5.h  dotMatrix8x8.h  dotMatrix8xN.h
app/include/devices/HLKStack/: HLKCommand.h  HLKDistance.h  HLKStandart.h
app/src/: Console.cpp  Main.cpp  Mainloop.cpp  VariableStore.cpp  usb_descriptors.cpp
app/src/Flash/: SPFS.Directory.cpp  SPFS.File.cpp  SPFS.ReadOnlyFile.cpp  SPFS.cpp  flash.cpp
app/src/HLKStack/: HLKCommand.cpp  HLKDistance.cpp  HLKFrame.cpp  HLKPackageFinder.cpp  HLKStandart.cpp
app/src/LED/: WS2812.cpp
app/src/RTC/: PicoTime.cpp  PicoTime.rp2040.inc  PicoTime.rp2350.inc
app/src/Utils/: ValueConverter.cpp  base64.cpp  crc.cpp  dataFile.cpp  hexadecimal.cpp
app/src/VariableStore/: Variable.cpp  VariableStore.cpp
app/src/deviceController/: DeviceRepository.cpp  UARTFactory.cpp
app/src/devices/: ADCDevice.cpp  GPIOdevice.cpp  HLKDevice.cpp  LEDStatus.cpp  Loopback.cpp  MultiPassthrough.cpp  PIO.cpp  PIODevice.cpp  PWMDevice.cpp  Passthrough.cpp  PassthroughMonitor.cpp  SevenSeg.cpp  UARTDevice.cpp  USBUARTDevice.cpp  WS2812.cpp  dotMatrix5x5.cpp  dotMatrix8x8.cpp  dotMatrix8xN.cpp
app/src/devices/HLKStack/: HLKCommand.cpp  HLKDistance.cpp
fs-test/: Makefile
fs-test/include/: Console.h  ICommand.h  ITask.h
fs-test/include/Commands/: CatCommand.h  ChangeDirCommand.h  DirCommand.h  ExitCommand.h  FSInfoCommand.h  HelpCommand.h  MakeDirCommand.h
fs-test/include/Flash/: SPFS.h  flash.h  flashHAL.h
fs-test/src/: Console.cpp  fs-test.c  fs-test.cpp
fs-test/src/Flash/: SPFS.Directory.cpp  SPFS.File.cpp  SPFS.ReadOnlyFile.cpp  SPFS.cpp  flash.cpp  flashHAL.cpp
test/: CMakeLists.txt
test/mocks/pico_sdk/: tusb.h
test/mocks/pico_sdk/Flash/: flashHAL.h
test/mocks/pico_sdk/hardware/: clocks.h  dma.h  flash.h  gpio.h  irq.h  pio.h  rtc.h  sync.h  timer.h  uart.h
test/mocks/pico_sdk/pico/: flash.h  stdlib.h  types.h
test/mocks/src/: dot_matrix_renderer.h  mock_flash.h  mock_flash_hal.cpp  mock_pio.cpp  mock_pio.h
test/unit/: test_dot_matrix.cpp  test_spfs.cpp  test_utils.cpp  test_variable_store.cpp
